# ficary

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  build-zipextractor.yml  tests.yml
ffn_dl/: __init__.py  __main__.py  ao3.py  attribution.py  cache_doctor.py  cf_solve.py  cli.py  download_queue.py  exporters.py  fichub.py  ficwad.py  gui.py  gui_dialogs.py  gui_search.py  mediaminer.py  merge.py  models.py  neural_env.py  notifications.py  prefs.py  royalroad.py  scraper.py  search.py  self_update.py  sites.py  tts.py  updater.py  url_classifier.py  watchlist.py  watchlist_doctor.py  wattpad.py  webnovel.py
ffn_dl/erotica/: __init__.py  bdsmlibrary.py  chyoa.py  darkwanderer.py  lushstories.py  mcstories.py  nifty.py  search.py
ffn_dl/tts_providers/: piper.py
ficary/: __init__.py  __main__.py  _cf_worker.py  accent_map.py  ao3.py  atomic.py  attribution.py  audiobookshelf.py  cache_doctor.py  cf_solve.py  character_profile.py  cli.py  content_hash.py  doctor.py  download_queue.py  exporters.py  fichub.py  ficwad.py  gui.py  gui_dialogs.py  gui_help.py  gui_search.py  gui_watchlist.py  heal_manifest.py  jobs.py  legacy.py  logging_utils.py  mailer.py  mediaminer.py  merge.py  models.py  neural_env.py  notifications.py  ollama_install.py  optional_features.py  portable.py  preferences.py  prefs.py  royalroad.py  scraper.py  (+14 more)
ficary/audio/: engine.py  events.py
ficary/erotica/: __init__.py  aff.py  bdsmlibrary.py  chastitymansion.py  chyoa.py  darkwanderer.py  fictionmania.py  giantessworld.py  greatfeet.py  literotica.py  lushstories.py  mcstories.py  mousepad.py  readonlymind.py  search.py  sexstories.py  storiesonline.py  tapatalk.py  tgstorytime.py  ticklingforum.py  xenforo.py
ficary/reader/: chunker.py  gui.py  live_tts.py  sleep_timer.py  source.py  state.py  theme.py
ficary/soundscape/: __init__.py  editor.py  library.py  model.py  session.py
ficary/tts_providers/: __init__.py  edge.py  piper.py
tests/: conftest.py  library_fixtures.py  test_adult_library_root.py  test_ao3.py  test_ao3_auth.py  test_atomic.py  test_audio.py  test_audiobookshelf.py  test_audit_fixes.py  test_audit_round11.py  test_base_scraper.py  test_bugfix_sweep.py  test_bulk_extractors.py  test_cache_doctor.py  test_cf_solve.py  test_chapter_numbering.py  test_chapter_spec.py  test_content_hash.py  test_cover_cache.py  test_epub_xhtml_validity.py  test_erotica_author_pages.py  test_erotica_downloads.py  test_erotica_scrapers.py  test_erotica_search_listings.py  test_exporter_output.py  test_exporters.py  test_extract_changelog.py  test_ffn.py  test_ffn_fandom_filters.py  test_fichub.py  test_ficwad.py  test_full_doctor.py  test_gui_smoke.py  test_html_metadata_formats.py  test_legacy.py  test_library_abandoned.py  test_library_autoindex.py  test_library_backup.py  test_library_browser.py  test_library_doctor.py  (+61 more)
tests/fixtures/: ficwad_author.html  mm_author.html  rr_profile_fictions.html  (+4 more)
tools/: extract_changelog.py
(+25 files in other folders)
