[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

# Explicit package discovery — the CI build workflows drop
# ffmpeg_bin/ and other transient folders alongside the source
# tree before the pip install step, and setuptools' flat-layout
# auto-discovery refuses to build when it sees more than one
# top-level directory. Pinning the pattern to "ffn_dl*" makes
# discovery deterministic regardless of what's in the workspace.
[tool.setuptools.packages.find]
include = ["ffn_dl*"]
namespaces = false

[project]
name = "ffn-dl"
version = "2.3.1"
description = "Cross-platform fanfiction + erotica downloader (FFN, AO3, FicWad, Royal Road, MediaMiner, Wattpad, Literotica, AFF, StoriesOnline, Nifty, SexStories, MCStories, Lushstories, Fictionmania, TGStorytime, Chyoa, Dark Wanderer, GreatFeet)"
requires-python = ">=3.9"
dependencies = [
    "curl_cffi>=0.7",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[project.optional-dependencies]
epub = ["ebooklib>=0.18"]
audio = ["edge-tts>=7.0"]
gui = ["wxPython>=4.2"]
clipboard = ["pyperclip>=1.8"]
cf-solve = ["playwright>=1.40"]
dev = ["pytest>=7.0"]
all = ["ebooklib>=0.18", "edge-tts>=7.0", "wxPython>=4.2", "pyperclip>=1.8"]

[project.scripts]
ffn-dl = "ffn_dl.cli:main"
