[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

# Explicit package discovery — the CI build workflows drop
# ffmpeg_bin/ and other transient folders alongside the source
# tree before the pip install step, and setuptools' flat-layout
# auto-discovery refuses to build when it sees more than one
# top-level directory. Pinning the pattern to "ficary*" makes
# discovery deterministic regardless of what's in the workspace.
[tool.setuptools.packages.find]
include = ["ficary*"]
namespaces = false

[project]
name = "ficary"
version = "2.16.3"
description = "Cross-platform fanfiction + erotica downloader (FFN, AO3, FicWad, Royal Road, MediaMiner, Wattpad, Webnovel, Literotica, AFF, StoriesOnline, Nifty, SexStories, MCStories, Lushstories, Fictionmania, TGStorytime, Chyoa, Dark Wanderer, GreatFeet, BDSM Library, The Mousepad, ReadOnlyMind, Giantess World, Chastity Mansion, TicklingForum)"
requires-python = ">=3.9"
dependencies = [
    # 0.11 is the verified floor for curl_cffi.requests.exceptions
    # (ConnectionError/Timeout), which scraper.py imports at module scope.
    "curl_cffi>=0.11",
    "beautifulsoup4>=4.12",
    # lxml 6.0.x carries CVE-2026-41066; 6.1.0 ships the fix.
    "lxml>=6.1.0",
]

[project.optional-dependencies]
epub = ["ebooklib>=0.18"]
audio = ["edge-tts>=7.0"]
gui = ["wxPython>=4.2"]
clipboard = ["pyperclip>=1.8"]
cf-solve = ["playwright>=1.40"]
playback = ["PyOpenAL>=0.7"]
dev = ["pytest>=7.0", "hypothesis>=6.100"]
all = ["ebooklib>=0.18", "edge-tts>=7.0", "wxPython>=4.2", "pyperclip>=1.8", "PyOpenAL>=0.7"]

[project.scripts]
ficary = "ficary.cli:main"
